--- a/VRCHapticsLite/MainWindow.xaml
+++ b/VRCHapticsLite/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VRCHapticsLite"
         mc:Ignorable="d"
-        Title="VRCHapticsLite" Height="450" Width="800"
+        Title="VRCHapticsLite" Height="550" Width="800"
         Loaded="Window_Loaded"
         Closed="Window_Closed">
 
@@ -14,6 +14,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="10"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Grid>
@@ -56,6 +58,20 @@
             <local:ModuleConfig Grid.Row="0" Grid.Column="2" DataContext="{Binding Vest}"     ModuleName="Vest"/>
             <local:ModuleConfig Grid.Row="0" Grid.Column="4" DataContext="{Binding LeftArm}"  ModuleName="LeftArm"/>
             <local:ModuleConfig Grid.Row="0" Grid.Column="8" DataContext="{Binding RightArm}" ModuleName="RightArm"/>
+        </Grid>
+
+        <Grid Grid.Row="4">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="200"/>
+            </Grid.ColumnDefinitions>
+
+            <local:ColorRangeControl Grid.Row="0" Grid.Column="0" DataContext="{Binding ActiveColor}"   LabelText="Active Color"/>
+            <local:ColorRangeControl Grid.Row="0" Grid.Column="2" DataContext="{Binding InactiveColor}" LabelText="Inactive Color"/>
         </Grid>
     </Grid>
 </Window>
